services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
  labels:
    app: radarr
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: radarr
  selector:
    app: radarr
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: radarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: radarrdb.crt.house
    metallb.universe.tf/address-pool: internal
  labels:
    app: postgres
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: postgres
  selector:
    app: postgres
