ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: radarr.crt.house
    nginx.org/websocket-services: radarr
spec:
  ingressClassName: nginx-crt-house
  rules:
  - host: radarr.crt.house
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 8989
  tls:
  - hosts:
    - radarr.crt.house
